--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "app-axios.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app-axios.js"
+    "start": "node -r esm app-axios.js"
+  },
+  "engines": {
+    "node": "17.x"
   },
   "repository": {
     "type": "git",
